@@ -6,27 +6,22 @@ import com.sol.dto.TokenAccountByOwnerResponse;
 import com.sol.dto.Transaction;
 import com.sol.dto.TransactionSignaturesResponse;
 import com.sol.exception.SolanaRpcException;
-import com.sol.proxy.BatchProcessor;
-import com.sol.proxy.HttpOps;
-import com.sol.util.CommonUtil;
+import com.sol.proxy.DynamicHttpOps;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class SolanaService {
 
-    private final HttpOps httpOps;
-    private final BatchProcessor batchProcessor;
+    private final DynamicHttpOps dynamicHttpOps;
 
     private static final String SOLANA_RPC_URL = "https://api.mainnet-beta.solana.com";
 
@@ -44,94 +39,20 @@ public class SolanaService {
                             Map.of("commitment", "confirmed", "encoding", "jsonParsed")))
                     .build();
 
-            TokenAccountByOwnerResponse response = httpOps.postJsonOnce(SOLANA_RPC_URL, "", blockRequest, 
-                    TokenAccountByOwnerResponse.class, Map.of()).block();
+            List<TokenAccountByOwnerResponse> responses = dynamicHttpOps.postJsonBatch(
+                    SOLANA_RPC_URL, "", List.of(blockRequest), TokenAccountByOwnerResponse.class, Map.of());
             
-            if (response == null) {
+            if (responses == null || responses.isEmpty()) {
                 throw new SolanaRpcException("getTokenAccountsByOwner", "Received null response from RPC", null);
             }
             
             log.debug("Successfully fetched token accounts for wallet: {}", wallet);
-            return response;
+            return responses.get(0);
         } catch (Exception e) {
             log.error("Failed to fetch token accounts for wallet {}: {}", wallet, e.getMessage(), e);
             throw new SolanaRpcException("getTokenAccountsByOwner", 
                     "Failed to fetch token accounts for wallet " + wallet, e);
         }
-    }
-
-    public Mono<TransactionSignaturesResponse> getSignaturesForAddress(
-            WebClient client,
-            String account
-    ) {
-        if (account == null || account.isBlank()) {
-            return Mono.error(new IllegalArgumentException("Account address cannot be null or empty"));
-        }
-        
-        final int PAGE_SIZE = 1000;
-        long limitUnix = CommonUtil.getDateBeforeDays(120);
-
-        // inline "one page" fetch
-        Function<String, Mono<TransactionSignaturesResponse>> fetchPage = (String before) -> {
-            Map<String, Object> params = new HashMap<>();
-            params.put("commitment", "confirmed");
-            params.put("limit", PAGE_SIZE);
-            if (before != null && !before.isBlank()) params.put("before", before);
-
-            SolanaRequest req = SolanaRequest.builder()
-                    .method("getSignaturesForAddress")
-                    .params(List.of(account, params))
-                    .build();
-
-            return httpOps.postJsonOnce(SOLANA_RPC_URL, "", req, TransactionSignaturesResponse.class, Map.of())
-                    .doOnError(error -> log.error("Failed to fetch signatures for account {}: {}", 
-                            account, error.getMessage()))
-                    .onErrorResume(error -> {
-                        log.warn("Recovering from signature fetch error for account {}, returning empty response", account);
-                        TransactionSignaturesResponse empty = new TransactionSignaturesResponse();
-                        empty.setResult(List.of());
-                        return Mono.just(empty);
-                    });
-        };
-
-        return fetchPage.apply(null)
-                .expand(resp -> {
-                    List<TransactionSignaturesResponse.Result> page =
-                            resp.getResult() == null ? List.of() : resp.getResult();
-
-                    if (page.isEmpty() || page.size() < PAGE_SIZE) return Mono.empty(); // done
-                    if( page.get(page.size() - 1).getBlockTime() < limitUnix) return Mono.empty();
-                    String nextBefore = page.get(page.size() - 1).getSignature();
-                    return fetchPage.apply(nextBefore);
-                })
-                .flatMapIterable(TransactionSignaturesResponse::getResult)
-                .collectList()
-                .map(all -> {
-                    TransactionSignaturesResponse agg = new TransactionSignaturesResponse();
-                    agg.setResult(all);
-                    return agg;
-                })
-                .doOnSuccess(result -> log.debug("Fetched {} signatures for account {}", 
-                        result.getResult() != null ? result.getResult().size() : 0, account));
-    }
-
-    public Mono<Transaction> getTransaction(WebClient client, String signature) {
-        if (signature == null || signature.isBlank()) {
-            return Mono.error(new IllegalArgumentException("Transaction signature cannot be null or empty"));
-        }
-        
-        Map<String, Object> params = new HashMap<>();
-        params.put("commitment", "confirmed");
-        params.put("encoding", "json"); // smaller payload than jsonParsed
-        params.put("maxSupportedTransactionVersion", 0);
-        params.put("rewards", false);
-        SolanaRequest blockRequest = SolanaRequest.builder().method("getTransaction").params(List.of(signature, params)).build();
-        return httpOps.postJsonOnce(client, SOLANA_RPC_URL, "", blockRequest, Transaction.class, Map.of())
-                .doOnError(error -> log.error("Failed to fetch transaction {}: {}", signature, error.getMessage()))
-                .onErrorResume(error -> {
-                    log.warn("Recovering from transaction fetch error for signature {}, returning null", signature);
-                    return Mono.empty();
-                });
     }
 
     @Cached(cacheName = "solanaService:getSignaturesBulk", key = "#wallet", activeProfile = "local")
@@ -144,22 +65,101 @@ public class SolanaService {
         log.info("Fetching signatures for {} accounts (wallet: {})", accounts.size(), wallet);
         
         try {
-            List<TransactionSignaturesResponse> responses = batchProcessor
-                    .processInLanes(SOLANA_RPC_URL, accounts, 20, this::getSignaturesForAddress)
-                    .collectList()
-                    .block();
+            List<TransactionSignaturesResponse> allResponses = new java.util.ArrayList<>();
             
-            if (responses == null) {
-                log.warn("Received null response from batch processor for wallet {}", wallet);
-                return List.of();
+            // Process each account with pagination
+            for (String account : accounts) {
+                List<TransactionSignaturesResponse.Result> accountSignatures = new java.util.ArrayList<>();
+                String beforeSignature = null;
+                String previousBeforeSignature = null;
+                boolean hasMore = true;
+                int pageCount = 0;
+                int maxPages = 100; // Safety limit to prevent infinite loops
+                
+                while (hasMore && pageCount < maxPages) {
+                    pageCount++;
+                    log.info("Fetching page {} for account {} (wallet: {}), total {}", pageCount, account, wallet, accountSignatures.size());
+                    
+                    // Create request with optional 'before' parameter for pagination
+                    Map<String, Object> params = new HashMap<>();
+                    params.put("commitment", "confirmed");
+                    params.put("limit", 1000);
+                    if (beforeSignature != null) {
+                        params.put("before", beforeSignature);
+                    }
+                    
+                    SolanaRequest request = SolanaRequest.builder()
+                            .method("getSignaturesForAddress")
+                            .params(List.of(account, params))
+                            .build();
+                    
+                    // Fetch single page
+                    List<TransactionSignaturesResponse> pageResponses = dynamicHttpOps.postJsonBatch(
+                            SOLANA_RPC_URL, "", 
+                            List.of(request), 
+                            TransactionSignaturesResponse.class, 
+                            Map.of());
+                    
+                    if (pageResponses == null || pageResponses.isEmpty() || pageResponses.get(0) == null || pageResponses.get(0).getResult() == null || pageResponses.get(0).getResult().size() == 0) {
+                        log.warn("Received null/empty response for account {} (wallet: {})", account, wallet);
+                        break;
+                    }
+                    
+                    TransactionSignaturesResponse pageResponse = pageResponses.get(0);
+                    List<TransactionSignaturesResponse.Result> pageResults = pageResponse.getResult();
+                    //log.info("Fetched {} signatures for before {}", pageResults.size(), beforeSignature);
+                    
+                    if (pageResults == null || pageResults.isEmpty()) {
+                        log.debug("No more signatures for account {} (wallet: {})", account, wallet);
+                        break;
+                    }
+                    
+                    // Add results to accumulated list
+                    accountSignatures.addAll(pageResults);
+                    log.debug("Page {} for account {}: {} signatures (total: {})", 
+                            pageCount, account, pageResults.size(), accountSignatures.size());
+                    
+                    // Check if we need to fetch more (result size == 1000 indicates possible more data)
+                    if (pageResults.size() == 1000) {
+                        // Get last signature for next page
+                        String lastSignature = pageResults.get(pageResults.size() - 1).getSignature();
+                        // long firstTimestamp = pageResults.get(0).getBlockTime();
+                        // long lastTimeStamp = pageResults.get(pageResults.size() - 1).getBlockTime();
+
+                        //log.info("FirstTimeStamp: {}, LastTimeStamp: {}", firstTimestamp, lastTimeStamp);
+                        
+                        // Check if we're stuck (same before signature as last iteration)
+                        if (lastSignature.equals(previousBeforeSignature)) {
+                            log.warn("Pagination detected duplicate before signature - stopping to prevent infinite loop for account {}", account);
+                            break;
+                        }
+                        
+                        previousBeforeSignature = beforeSignature;
+                        beforeSignature = lastSignature;
+                        //log.info("fetching next page with before={}", beforeSignature);
+                    } else {
+                        hasMore = false;
+                    }
+                }
+                
+                if (pageCount >= maxPages) {
+                    log.warn("Reached maximum page limit ({}) for account {} (wallet: {})", maxPages, account, wallet);
+                }
+                
+                // Create response object with all accumulated signatures for this account
+                TransactionSignaturesResponse accountResponse = new TransactionSignaturesResponse();
+                accountResponse.setResult(accountSignatures);
+                allResponses.add(accountResponse);
+                
+                log.info("Fetched total {} signatures across {} pages for account {} (wallet: {})", 
+                        accountSignatures.size(), pageCount, account, wallet);
             }
             
-            log.info("Successfully fetched signatures for {} accounts (wallet: {})", responses.size(), wallet);
-            return responses;
+            log.info("Successfully fetched signatures for {} accounts (wallet: {})", allResponses.size(), wallet);
+            return allResponses;
         } catch (Exception e) {
             log.error("Failed to fetch signatures bulk for wallet {}: {}", wallet, e.getMessage(), e);
-            throw new SolanaRpcException("getSignaturesBulk", 
-                    "Failed to fetch signatures for wallet " + wallet, e);
+            return List.of();
         }
     }
 
@@ -170,37 +170,57 @@ public class SolanaService {
             return List.of();
         }
         
-        log.info("Fetching {} transactions for wallet: {}", signatures.size(), wallet);
+        log.info("Fetching {} transactions for wallet: {} (region-based session pooling with reuse)", 
+                signatures.size(), wallet);
         
         try {
-            List<Transaction> transactions = batchProcessor
-                    .processInLanes(SOLANA_RPC_URL, signatures, 15, this::getTransaction)
-                    .collectList()
-                    .block();
+            // Create requests for each signature
+            List<SolanaRequest> requests = signatures.stream()
+                    .map(signature -> {
+                        Map<String, Object> params = new HashMap<>();
+                        params.put("commitment", "confirmed");
+                        params.put("encoding", "json");
+                        params.put("maxSupportedTransactionVersion", 0);
+                        params.put("rewards", false);
+                        
+                        return SolanaRequest.builder()
+                                .method("getTransaction")
+                                .params(List.of(signature, params))
+                                .build();
+                    })
+                    .collect(Collectors.toList());
+            
+            // Use region-based session pooling with reuse for large batches
+            // Fetches up to 1000 unique IPs across regions, then reuses for all batches
+            // Batch size: 1000 (or available sessions), 2s delay between batches
+            int batchSize = 1000;
+            int delaySeconds = 2;
+            
+            List<Transaction> transactions = dynamicHttpOps.postJsonBatchWithSessionReuse(
+                    SOLANA_RPC_URL, "", 
+                    requests.stream().map(r -> (Object) r).collect(Collectors.toList()), 
+                    Transaction.class, 
+                    Map.of(),
+                    batchSize,
+                    delaySeconds);
             
             if (transactions == null) {
-                log.warn("Received null response from batch processor for wallet {}", wallet);
+                log.warn("Received null response for wallet {}", wallet);
                 return List.of();
             }
             
-            // Filter out nulls from failed individual fetches
+            // Filter out nulls from failed fetches
             List<Transaction> validTransactions = transactions.stream()
                     .filter(tx -> tx != null)
-                    .toList();
+                    .collect(Collectors.toList());
             
             log.info("Successfully fetched {}/{} transactions for wallet: {}", 
                     validTransactions.size(), signatures.size(), wallet);
             
-            if (validTransactions.size() < signatures.size()) {
-                log.warn("Failed to fetch {} transactions for wallet: {}", 
-                        signatures.size() - validTransactions.size(), wallet);
-            }
-            
             return validTransactions;
         } catch (Exception e) {
             log.error("Failed to fetch transactions bulk for wallet {}: {}", wallet, e.getMessage(), e);
-            throw new SolanaRpcException("getTransactionBulk", 
-                    "Failed to fetch transactions for wallet " + wallet, e);
+            return List.of();
         }
     }
 
